# BCSSort

./: .gitignore  CMakeLists.txt  README.md  \  betasort.cxx  clean  fithl.C  fluctuation_i2s.C  helloworld.cxx  junk.C  loop.C  make_list.C  some_junk.c  thing.c  thing.cxx  tofcorrection.C
CORAnalysis/: data  junk.cxx
CORAnalysis/C_code/: 373hlfit.C  TOF_check.C  counter.C  ddashcheck.C  decay_simple_print.C  decaysort.C  decaysort2.C  gamma_hlfit.C  hist.C  impcounter.C  impcounter_bl.C  impcounter_bl2.C  light_ion_sort.C  pid_GamGated.C  quick.C
CORAnalysis/C_code/bananasort/: hist.C
CORAnalysis/C_code/corl/: corl3.cxx  corl4.cxx  corl4_ori.C  hist1.C  hist2.C  histsort.C
C_code/: Bg_ratio.C  CrystalBall.C  I2pos_check.C  Logy.C  Na32sort.C  NeSeparation.C  beta_tof_check.C  betaloop.C  betaprint.C  betasort.C  betasort_old.C  convert_TF1_txt.C  convert_TH1_txt.C  convert_curvefitting_txt.C  convert_curvefitting_txt_30Ne.C  convert_txt_gr.C  correlation.C  correlation_loop.C  correlation_loop1.C  correlation_loop2.C  correlation_old.C  correlation_old2.C  correlation_old3.C  eventdt.C  eventhitpad.C  eventloop.C  eventprint.C  eventsort.C  fitformular_Ne.C  implantloop.C  listsort.C  loop.C  macro.C  macro1.C  macro2.C  quickexpfit.C  tofcorrection.C
C_code/efficiency/: efficiency.C  efficiency_SRM.C  efficiency_old.C  efficiency_peakfit.C  efficiency_peakfit_old.C  quickhist.C
C_code/eg/: do_fits2.c  do_fits3.c
C_code/quickcommand/: PID_GamGate.C  gamma373_hlfit.C  gamma373_hlfit_bybinwidth.C  gamma_hlfit.C  quickcommand.C  quickcommand_dt150check.C  rescale.C  tspectrum_bgsub.c
C_code/search_initPar/: searchinitPar.C  searchinitPar_Ne.C  searchinitPar_Ne_1.C  searchinitPar_Ne_2.C  searchinitPar_Ne_3.C  searchinitPar_Ne_4.C
Na_gamma_data/: Na32_885.agr  Na33_885.agr
NeAnalysis/grace/30Ne_slide554/: singles_50ms_197065sub_1500_2500ms.agr
NeAnalysis/grace/30Ne_slide554/hlfit/: hlfit_slide579.agr  hlfit_slide579_1.agr  hlfit_slide579_2.agr
NeAnalysis/grace/31Ne_addback_slide554_0_10ms/: 0_4000keV.agr  1005_2000keV.agr  2000_3000keV.agr  200_500keV.agr  3000_4000keV.agr  595_1005keV.agr
NeAnalysis/grace/31Ne_singles_slide554_0_10ms/: 3000_4000keV.agr  31NE_singles_slides554_0_10ms_1005_2000keV.agr  31NE_singles_slides554_0_10ms_2000_3000keV.agr  31Ne_singles_10ms.agr  31Ne_singles_slide554_0_10ms_200_500keV.agr  31Ne_singles_slide554_0_10ms_600_1005keV.agr
NeAnalysis/grace/31Ne_singles_slide554_0_20ms/: 0_4000.agr  200_500keV.agr
NeAnalysis/grace/example/: somejunk.agr  test.agr
NeAnalysis/grace/level_scheme/: 30Ne_30Na.agr  30Ne_30Na_1.agr  31Ne_31Na_theory.agr  32Na_32Mg.agr
clover_check/: counter.C
config/: detmap_10.txt
graph/: gadd1_ab_4keV.agr  gadd_single_4keV.agr  ggmat_ab_70_32Na_4keV.agr  matrix_ab_tp_4keV.agr  matrix_tp_1keV.agr  single_1keV.agr  single_4keV.agr  singles_885_slide535_recna1.agr  singles_885_slide535_recna4.agr
graph/decaycurve/: 32Na_decaycurve_2ms.agr  32Nadecaycurve_5ms.agr
include/: BCSOptions.h  BCSint.h  BCSintFunctions.h  Correlator.h  DDASHit.h  DetHit.h  GCanvas.h  GH1D.h  Histogram.h  Implant.h  OutputManager.h  TChannel.h  TOFCorrection.h  ddaschannel.h  ddaschannel_old.h  globals.h  junk.h  util.h
libraries/BCSint/: BCSOptions.cxx  BCSint.cxx  BCSintFunctions.cxx  BCSint_olf.cxx  LinkDef.h
libraries/Correlator/: Correlator.cxx  Correlator_new.cxx  LinkDef.h
libraries/DDAS/: LinkDef.h  ddaschannel.cxx
libraries/GROOT/: GCanvas.cxx  GH1D.cxx  LinkDef.h
libraries/HIT/: DetHit.cxx  Implant.cxx  Implant_old.cxx  LinkDef.h
libraries/Histogram/: Histogram.cxx  Histogram_BetaSort_old.cxx  Histogram_old.cxx  Histogram_old2.cxx  Histogram_old3.cxx  LinkDef.h
libraries/OutputManager/: LinkDef.h  OutputManager.cxx
libraries/TOFFluctuation/: LinkDef.h  TOFCorrection.cxx
libraries/Util/: LinkDef.h  TChannel.cxx  util.cxx
libraries/junk/: LinkDef.h  junk.cxx
soumik/: eventsort.C
src/: bcssort.cxx
